# cragsman

./: CMakeLists.txt  README.md  appveyor.yml
.github/workflows/: tests.yml
data/cragsman/: cragsman.assets  cragsman.pack
data/cragsman/boulder/: boulder.asset  boulder.assets  boulder.blend  boulder.blend_boulder.cpm  boulder.object  boulder.pack
data/cragsman/character/: body.blend  body.blend_body.cpm  body.object  character.asset  character.assets  character.pack  elbow.blend  elbow.blend_elbow.cpm  elbow.object  hand.blend  hand.object  shoulder.blend  shoulder.blend_shoulder.cpm  shoulder.object  sphere.blend  sphere.blend_DefaultMaterial.cpm  sphere.object
data/cragsman/clinch/: clinch.asset  clinch.assets  clinch.blend  clinch.blend_clinch.cpm  clinch.object  clinch.pack
data/cragsman/particle/: particle.asset  particle.assets  particle.blend  particle.blend_particle.cpm  particle.object  particle.pack
sources/: baseTile.h  boulders.cpp  character.cpp  clinches.cpp  common.h  controls.cpp  generator.cpp  gui.cpp  main.cpp  physics.cpp  procedural.cpp  terrain.cpp  visual.cpp
